k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      automountServiceAccountToken: false
      containers:
      - name: python
        image: aliyasser98/hivebox:latest
        ports:
        - containerPort: 5000
        - containerPort: 9090
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "120m"
            memory: "150Mi"
        securityContext:
          runAsUser: 1000   
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: app-storage-volume 
          mountPath: /data          
      volumes:
      - name: app-storage-volume
        persistentVolumeClaim:
          claimName: hivebox-storage 
      imagePullSecrets:
        - name: docker-secret
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: python
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      name: port1
      port: 5000
      targetPort: 5000
      nodePort: 30000
    - protocol: TCP
      name: port2
      port: 9090
      targetPort: 9090
      nodePort: 30001
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: " "
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /version
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 5000
      - path: /temperature
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 5000
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 5000
